--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.6.0",
     "ngx-captcha": "^9.0.1",
+    "ngx-pagination": "^5.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.3.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
