--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~9.1.12",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.12",
@@ -23,7 +24,9 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.6.0",
+    "google-maps-angular": "^2.1.6",
     "ngx-captcha": "^9.0.1",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-pagination": "^5.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
@@ -35,6 +38,7 @@
     "@angular-devkit/build-angular": "~0.901.12",
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.12",
+    "@types/googlemaps": "^3.39.12",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
