--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ngx-captcha": "^9.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-pagination": "^5.0.0",
+    "pdfmake": "^0.1.71",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "rxjs": "~6.5.4",
