--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.6.0",
     "google-maps-angular": "^2.1.6",
+    "html2pdf.js": "^0.9.2",
     "ngx-captcha": "^9.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-pagination": "^5.0.0",
