--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pdfmake": "^0.1.71",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
+    "quagga": "^0.12.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
