--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "bootstrap": "^4.6.0",
     "google-maps-angular": "^2.1.6",
     "html2pdf.js": "^0.9.2",
+    "jquery": "^3.6.0",
     "ngx-captcha": "^9.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-pagination": "^5.0.0",
     "pdfmake": "^0.1.71",
+    "popper.js": "^1.16.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "quagga": "^0.12.1",
